Ensure proper flex-wrap behaviour for edit and add inventory components header titles

--- a/src/components/AddInventoryItem/AddInventoryItem.scss
+++ b/src/components/AddInventoryItem/AddInventoryItem.scss
@@ -22,7 +22,6 @@
 .inventory-add-header {
   background-color: $pri-white;
   display: flex;
-  flex-wrap: wrap;
   gap: sizeIncrement(2);
   align-items: center;
   @include padding(bottom, sizeIncrement(6));
